RESOLVED FIXED155829
[ES6] Greedy unicode RegExp's don't properly backtrack past non BMP characters
https://bugs.webkit.org/show_bug.cgi?id=155829
Summary [ES6] Greedy unicode RegExp's don't properly backtrack past non BMP characters
Michael Saboff
Reported 2016-03-23 21:22:20 PDT
I found this while working on <https://bugs.webkit.org/show_bug.cgi?id=155807>
Attachments
Patch (7.25 KB, patch)
2016-03-23 22:15 PDT, Michael Saboff
saam: review+
Michael Saboff
Comment 1 2016-03-23 22:15:17 PDT
Radar WebKit Bug Importer
Comment 2 2016-03-23 22:15:44 PDT
Saam Barati
Comment 3 2016-03-23 22:32:20 PDT
Comment on attachment 274817 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=274817&action=review > Source/JavaScriptCore/runtime/RegExpObject.cpp:194 > + size_t stringLength = s.length(); Nit: length is unsigned not size_t
Michael Saboff
Comment 4 2016-03-24 07:19:37 PDT
Note You need to log in before you can comment on or make changes to this bug.